fix: planet overflowing > 100vw

--- a/public/index.css
+++ b/public/index.css
@@ -1347,6 +1347,18 @@ background: linear-gradient(var(--degree), var(--primary) 0%, var(--primary-ligt
   }
 }
 
+@media only screen and (min-width: 1400px) and (max-width: 1600px) {
+  .planet > .circle {
+    right: 100px !important;
+  }
+}
+
+@media only screen and (max-width: 1399px) {
+  .planet {
+    display: none;
+  }
+}
+
 .formations .block h4 {
   margin-bottom: 4px;
 }
